--- a/photo.css
+++ b/photo.css
@@ -37,5 +37,6 @@ p {
 img:hover {
     border: 1px solid greenyellow;
     transform: scale(1.3);
+    transition: 870ms;
     position: relative;
 }
